--- a/src/assets/css/element-variables.scss
+++ b/src/assets/css/element-variables.scss
@@ -4,9 +4,13 @@ found in element-ui/packages/theme-chalk/src/common/var.scss.
 For example, to overwrite the theme color:
 */
 $--color-primary: teal;
+
+/* icon font path, required */
+$--font-path: '~element-ui/lib/theme-chalk/fonts';
+
+
 .mask_img_bg{
-  margin: 0px auto; 
-  background: rgba(0,0,0,.8);
+  margin: 0px auto; background: rgba(0,0,0,.7);
   z-index: 100000;
   position: fixed;
   top: 0;
@@ -20,8 +24,5 @@ $--color-primary: teal;
     padding-top: 20px;
   }
 }
-
-/* icon font path, required */
-$--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 @import "~element-ui/packages/theme-chalk/src/index";
